# vertebrae

./: CMakeLists.txt  README.rst
cmake/: config.h.in  git_revision.cmake
include/: logo.h  mainwindow.h  viewport.h
include/scene/: actor.h  scene.h  viewport.h
src/: CMakeLists.txt  logo.cpp  main.cpp  mainwindow.cpp  viewport.cpp
src/gui/: mainwindow.ui
src/scene/: actor.cpp  scene.cpp  viewport.cpp
